# hidapi

./: CMakeLists.txt  Makefile.am  README.txt  configure.ac
hidapi/: CMakeLists.txt  hidapi.h
hidapi2osc/: Makefile.am
hidapi_parser/: hidapi_parser.c
hidparsertest/: Makefile.am  hidparsertest.c
hidtest/: CMakeLists.txt  hidtest.cpp
hut/: hut_11_telephony.yaml  hut_12_consumer.yaml  hut_13_digitizers.yaml  hut_20_alphanumeric_display.yaml  hut_4_sport_controls.yaml  hut_64_medical_instrument.yaml  hut_7_keyboard_keypad.yaml  hut_8_ledpage.yaml
libusb/: CMakeLists.txt  hid.c
linux/: CMakeLists.txt  hid.c
mac/: CMakeLists.txt  hid.c
windows/: CMakeLists.txt  hid.c
